<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item-->
<!--        android:id="@+id/profileFragment"-->
<!--        android:icon="@android:drawable/ic_menu_myplaces"-->
<!--        android:title="@string/profile" />-->

    <item
        android:id="@+id/myBooksFragment"
        android:title="@string/my_books"
        android:icon="@drawable/ic_my_books" />

    <item
        android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_search" />

    <item
        android:id="@+id/notifsFragment"
        android:icon="@drawable/ic_bell"
        android:title="@string/notifications" />

    <item
        android:id="@+id/messagingFragment"
        android:icon="@drawable/ic_message"
        android:title="@string/Messages" />

</menu>