<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notifs_row_action_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifs_row_borrow_request"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/notifs_row_book_picture"
                    android:layout_width="73dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/book_picture_content_description"
                    app:srcCompat="@drawable/ic_book" />

                <LinearLayout
                    android:layout_width="331dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/notifs_row_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5dp" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/notifs_row_isbn_text"
                                android:layout_width="95dp"
                                android:layout_height="wrap_content"
                                android:text="@string/my_books_row_isbn_text" />

                            <TextView
                                android:id="@+id/notifs_row_isbn_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="5dp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/notifs_row_copies_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/notifs_row_copies_text" />

                            <TextView
                                android:id="@+id/notifs_row_copies_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </TableRow>

                    </TableLayout>
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/user_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/user_picture_content_description"
                    app:srcCompat="@android:drawable/ic_menu_myplaces"
                    tools:ignore="ImageContrastCheck" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/notifs_row_name_text"
                            android:layout_width="94dp"
                            android:layout_height="wrap_content"
                            android:text="@string/notifs_row_name_text"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/notifs_row_name_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="5dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/notifs_row_institution_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notifs_row_institution_text" />

                        <TextView
                            android:id="@+id/notifs_row_institution_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="5dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/notifs_row_department_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/department" />

                        <TextView
                            android:id="@+id/notifs_row_department_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                </TableLayout>

            </TableRow>

        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/notifs_row_accept_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifs_row_accept_button_text"
                android:textSize="11sp" />

            <Button
                android:id="@+id/notifs_row_deny_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifs_row_deny_button_text"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>

</TableRow>
