<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity">

    <TextView
        android:id="@+id/add_book_heading"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginStart="146dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="57dp"
        android:text="@string/add_book_heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_text_input"
            android:layout_width="301dp"
            android:layout_height="55dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="118dp"
            android:layout_marginEnd="55dp"
            android:hint="@string/book_title_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/isbn_text_input"
            android:layout_width="301dp"
            android:layout_height="55dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="55dp"
            android:hint="@string/book_isbn_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/isbn_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/published_text_input"
            android:layout_width="301dp"
            android:layout_height="55dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="55dp"
            android:hint="@string/book_published_date_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/isbn_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/published_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_book_button"
            android:layout_width="192dp"
            android:layout_height="48dp"
            android:layout_marginTop="255dp"
            android:layout_marginBottom="113dp"
            android:text="@string/add_book"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/published_text_input" />
</androidx.constraintlayout.widget.ConstraintLayout>