<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myBooksTabFragments.OwnedBooksFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/owned_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/owned_books_empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_books_you_own_with_the_button_below"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_book"
        android:src="@drawable/ic_add"
        android:translationZ="90dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/add_book_floating_button"
        app:layout_constraintEnd_toEndOf="@+id/add_book_floating_button"
        app:layout_constraintStart_toStartOf="@+id/add_book_floating_button"
        app:layout_constraintTop_toTopOf="@+id/add_book_floating_button"
        app:tint="?attr/colorPrimaryVariant" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_book_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/light_blue"
        android:clickable="true"
        android:contentDescription="@string/add_book_heading"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--</FrameLayout>-->

